10/canary/app-v2.yml
apiVersion: v1
kind: Service
metadata:
  name: info-webapp-svc-v2
  labels:
    app.kubernetes.io/part-of: canary-demo
spec:
  ports:
  - name: http
    port: 80
    targetPort: http # targetPort as name 
  selector: # Note here that we match both the app and the version
    app.kubernetes.io/name: info-webapp
    app.kubernetes.io/version: v2.0.0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: info-deploy-v2
  labels:
    app.kubernetes.io/part-of: canary-demo
spec:
  replicas: 5
  selector: 
    matchLabels:
      app.kubernetes.io/name: info-webapp
      app.kubernetes.io/version: v2.0.0     
  template:
    metadata:
      labels:
        app.kubernetes.io/name: info-webapp
        app.kubernetes.io/version: v2.0.0
    spec:
      containers:
      - name: webapp-ctr
        image: k8smaestro/info
        ports:
        - name: http
          containerPort: 8080
        - name: probes
          containerPort: 8081
        livenessProbe:
          httpGet:
            path: /live
            port: probes
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /ready
            port: probes
          periodSeconds: 5
