10/canary/ingress-canary.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: info-app-canary
  labels:
    app.kubernetes.io/part-of: canary-demo
  annotations:
    kubernetes.io/ingress.class: "nginx"

    # Enable canary and send 30% of traffic to version 2
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "30"
spec:
  rules:
  - host: info.app.34.118.127.205.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: info-webapp-svc-v2
            port: 
              number: 80
